SERVER-19240 change OpTime reporting format based on protocol version