src/mongo/db/repl/topology_coordinator_impl.cpp
@@ -1360,10 +1360,15 @@ void TopologyCoordinatorImpl::prepareStatusResponse(const ReplicationExecutor::C
         response->append("stateStr", myState.toString());
         response->append("uptime", selfUptime);
 
-        BSONObjBuilder opTime(response->subobjStart("optime"));
-        opTime.append("ts", lastOpApplied.getTimestamp());
-        opTime.append("term", lastOpApplied.getTerm());
-        opTime.done();
+        if (_rsConfig.getProtocolVersion() == 1) {
+            BSONObjBuilder opTime(response->subobjStart("optime"));
+            opTime.append("ts", lastOpApplied.getTimestamp());
+            opTime.append("term", lastOpApplied.getTerm());
+            opTime.done();
+        }
+        else {
+            response->append("optime", lastOpApplied.getTimestamp());
+        }
 
         response->appendDate("optimeDate",
                              Date_t::fromDurationSinceEpoch(Seconds(lastOpApplied.getSecs())));
@@ -1391,10 +1396,15 @@ void TopologyCoordinatorImpl::prepareStatusResponse(const ReplicationExecutor::C
             bb.append("stateStr", myState.toString());
             bb.append("uptime", selfUptime);
             if (!_selfConfig().isArbiter()) {
-                BSONObjBuilder opTime(bb.subobjStart("optime"));
-                opTime.append("ts", lastOpApplied.getTimestamp());
-                opTime.append("term", lastOpApplied.getTerm());
-                opTime.done();
+                if (_rsConfig.getProtocolVersion() == 1) {
+                    BSONObjBuilder opTime(bb.subobjStart("optime"));
+                    opTime.append("ts", lastOpApplied.getTimestamp());
+                    opTime.append("term", lastOpApplied.getTerm());
+                    opTime.done();
+                }
+                else {
+                    bb.append("optime", lastOpApplied.getTimestamp());
+                }
 
                 bb.appendDate("optimeDate",
                               Date_t::fromDurationSinceEpoch(Seconds(lastOpApplied.getSecs())));
@@ -1442,10 +1452,15 @@ void TopologyCoordinatorImpl::prepareStatusResponse(const ReplicationExecutor::C
                 it->getUpSince() != Date_t() ? durationCount<Seconds>(now - it->getUpSince()) : 0));
             bb.append("uptime", uptime);
             if (!itConfig.isArbiter()) {
-                BSONObjBuilder opTime(bb.subobjStart("optime"));
-                opTime.append("ts", it->getOpTime().getTimestamp());
-                opTime.append("term", it->getOpTime().getTerm());
-                opTime.done();
+                if (_rsConfig.getProtocolVersion() == 1) {
+                    BSONObjBuilder opTime(bb.subobjStart("optime"));
+                    opTime.append("ts", it->getOpTime().getTimestamp());
+                    opTime.append("term", it->getOpTime().getTerm());
+                    opTime.done();
+                }
+                else {
+                    bb.append("optime", it->getOpTime().getTimestamp());
+                }
 
                 bb.appendDate("optimeDate",
                               Date_t::fromDurationSinceEpoch(Seconds(it->getOpTime().getSecs())));
